Fixed PopupWindowFocus for UAv2.

Also cleanup other tests' dependency on user activation.

Bug: 831331
Change-Id: Ic2268318336d64e0031fe782ec4c48b9d91ae36b
Reviewed-on: https://chromium-review.googlesource.com/1006047
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Reviewed-by: Nate Chapin <japhet@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552155}
Former-commit-id: cc2f610e55fabe4a85e666c536eef7f6824e5551